--- a/src/app/lessons/components/pages/lesson-list/lesson-list.component.html
+++ b/src/app/lessons/components/pages/lesson-list/lesson-list.component.html
@@ -7,18 +7,21 @@
     <mat-grid-tile>
       <button [routerLink]="['javascript']">
         <img class="tileImg" src="/assets/JavaScript-logo.png">
+        <h1>Javascript</h1>
         <h2 style="margin-left: 10px; text-align: right">Bring your website to life with Javascript</h2>
       </button>
     </mat-grid-tile>
     <mat-grid-tile>
       <button [routerLink]="['html']">
         <img class="tileImg" src="/assets/HTML-logo.png">
+        <h1>HTML</h1>
         <h2 style="margin-left: 10px; text-align: right">Create the structure of your website with HTML</h2>
       </button>
     </mat-grid-tile>
     <mat-grid-tile style="margin-top: -75px">
       <button [routerLink]="['css']">
         <img id="css" class="tileImg" src="/assets/CSS3-logo.png">
+        <h1 style="margin-left: 50%;">CSS</h1>
         <h2 style="margin-left: 10px; text-align: right">Style your website with CSS</h2>
       </button>
     </mat-grid-tile>
